@startuml
title v1.0.2 naming UML图

interface javax.naming.directory.DirContext
abstract class BaseDirContext
class FileDirContext
class NamingContextEnumeration
class NamingEntry
class ProxyDirContext
class Resource
class ResourceAttributes
class WARDirContext
class FileDirContext.FileResource <<inner class>>
class FileDirContext.FileResourceAttributes <<inner class>>
class WARDirContext.Entry <<inner class>>
class WARDirContext.WARResource <<inner class>>
class ProxyDirContext.CacheEntry <<inner class>>

note "ProxyDirContext代理BaseDirContext\n的实现子类，便于缓存的资源" as n1
ProxyDirContext .. n1
n1 .. BaseDirContext

javax.naming.directory.DirContext <|.. BaseDirContext
BaseDirContext <|-- FileDirContext
BaseDirContext <|-- WARDirContext
FileDirContext <-- FileDirContext.FileResource
FileDirContext <-- FileDirContext.FileResourceAttributes
WARDirContext "1" o-- "n" WARDirContext.Entry
WARDirContext <-- WARDirContext.WARResource
ProxyDirContext <-- BaseDirContext
ProxyDirContext <-- ProxyDirContext.CacheEntry
javax.naming.directory.DirContext <|.. ProxyDirContext
ResourceAttributes <|-- FileDirContext.FileResourceAttributes
Resource <|-- FileDirContext.FileResource
Resource <|-- WARDirContext.WARResource
FileDirContext <-- NamingContextEnumeration
WARDirContext <-- NamingContextEnumeration
NamingContextEnumeration "1" o-- "n" NamingEntry
WARDirContext ..> ResourceAttributes



@enduml